# immich-photo-curator

./: .env.example  .gitignore  README.md  pyproject.toml
benchmark/: run_hybrid_trial.py  run_small_sample.py
benchmark/templates/: hybrid_filtered_report.html  hybrid_report.html  report.html
docs/: hybrid-workflow.md  public-release.md
launchd/: com.example.nasai.incremental.plist
nasai/: cli.py  config.py  db.py  immich.py  preview.py  scoring.py  sync.py  taxonomy.py
nasai/templates/: index.html  progress.html
scripts/: run_incremental.sh
tools/: vision_probe.swift
